--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <meta charset="utf-8">
 
 <!--
-  Proof of concept implementation of webgl/gltf tiles for leaflet
-  accessibility maps requested from route360-js api.
-
   ** Copyright & License **
+  (C) 2017 Marc Listemann <marc.listemann@uni-potsdam.de>
   (C) 2015-2016 Alexander Schoedon <schoedon@uni-potsdam.de>
 
   All rights reserved. View LICENSE for full GPLv3 conditions.
@@ -13,7 +11,7 @@
 
 <html>
   <head>
-    <title>reachability maps proof of concept #5 webgl gltf tiling</title>
+    <title>Focus+Context Visualization (Magic Lens) for Accessbility Maps</title>
   </head>
 
   <body onload="accessibility_map()">
